# iclr2026

./: .dockerignore  .env.example  Dockerfile.uv  README.md  compose.local.yml  compose.remote.yml  pyproject.toml  requirements.txt
app/: config.py  db.py  main.py  mcp_server.py  search.py
scripts/: bootstrap.sh  dev_up.sh  embed_papers.py  fetch_openreview_iclr2026.py  init_db.py  remote_up.sh  serve_app.sh  serve_mcp.sh  with_env.sh
