[project]
name = "iclr2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.0",
    "gradio>=5.49.1",
    "httpx>=0.28.1",
    "openai>=2.6.0",
    "pgvector>=0.4.1",
    "psycopg[binary]>=3.1.18",
    "uvicorn[standard]>=0.30.0",
]
